--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             padding: 0;
         }
         header {
-            background-color: #333;
-            color: #fff;
+            background-color: #1c139b;
+            color: #ffffff;
             text-align: center;
             padding: 1em;
         }
