--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,33 +8,57 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #130101;
             margin: 0;
             padding: 0;
         }
+
         header {
-            background-color: #1c139b;
-            color: #ffffff;
+            background: linear-gradient(to bottom, #424244, #000000);
+            /* Degradado vertical */
+            color: #f0f0f0;
             text-align: center;
             padding: 1em;
+            box-shadow: 0px 0px 10px rgb(255, 93, 93);
+            text-shadow: 4px 4px 4px #1b0505;
         }
+
         h1 {
             font-size: 2em;
         }
+
         .container {
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
+            background-color: #202020;
+            color: #f0f0f0;
+        }
+
+        .con {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #d6d6d6;
+            color: #000000;
         }
     </style>
 </head>
+
 <body>
     <header>
-        <h1>LU9DCE</h1>
+        <br>
+        <h1>LU9DCE - Eduardo Castillo</h1><br>
+        Radio Aficionado - Programas PHP - Linux -  (Argentina)<br><br>
     </header>
     <div class="container">
-        <h2>¡Bienvenido!</h2>
-        <p>Esta es una página web de ejemplo.</p>
-     </div>
+        <h2>¡Bienvenido! a mi web!</h2>
+        <p></p>
+    </div>
+    <div class="con">
+        <p>En esta web encontrarás datos sobre mí que compartiré contigo 😊</p>
+        <p>Más que nada, son cosas que me gustan y mis pasatiempos 🎮</p>
+    </div>
 </body>
+
 </html>
