--- a/index.html
+++ b/index.html
@@ -8,23 +8,28 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #130101;
+            background-color: #000000;
             margin: 0;
             padding: 0;
         }
 
         header {
             background: linear-gradient(to bottom, #424244, #000000);
-            /* Degradado vertical */
             color: #f0f0f0;
             text-align: center;
             padding: 1em;
-            box-shadow: 0px 0px 10px rgb(255, 93, 93);
-            text-shadow: 4px 4px 4px #1b0505;
+            box-shadow: 0px 0px 10px rgb(7, 241, 58);
+            text-shadow: 2px 2px 2px #064700;
+        }
+
+        .xd {
+            background: linear-gradient(to bottom, #424244, #000000);
+            padding: 1em;
+            box-shadow: 0px 0px 10px rgb(7, 241, 58);
         }
 
         h1 {
-            font-size: 2em;
+            font-size: 3em;
         }
 
         .container {
@@ -48,9 +53,10 @@
 <body>
     <header>
         <br>
-        <h1>LU9DCE - Eduardo Castillo</h1><br>
-        Radio Aficionado - Programas PHP - Linux -  (Argentina)<br><br>
+        <h1>LU9DCE - Eduardo Castillo</h1>
+        <h2>Radio Aficionado - Programas PHP - Linux -  (Argentina)</h2><br><br><br>
     </header>
+    <div class="xd">
     <div class="container">
         <h2>¡Bienvenido! a mi web!</h2>
         <p></p>
@@ -59,6 +65,7 @@
         <p>En esta web encontrarás datos sobre mí que compartiré contigo 😊</p>
         <p>Más que nada, son cosas que me gustan y mis pasatiempos 🎮</p>
     </div>
+</div>
 </body>
 
 </html>
