--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         header {
             background: linear-gradient(to bottom, #424244, #000000);
-            color: #f0f0f0;
+            color: #ffffff;
             text-align: center;
             padding: 1em;
             box-shadow: 0px 0px 10px rgb(7, 241, 58);
@@ -43,9 +43,24 @@
         .con {
             max-width: 800px;
             margin: 0 auto;
-            padding: 20px;
-            background-color: #d6d6d6;
-            color: #000000;
+            padding: 10px;
+            background-color: #082707;
+            color: #f8f1f1;
+        }
+
+        .boton {
+            background: linear-gradient(to bottom, #cac4c4, #010500);
+            color: #ffffff;
+            border: none;
+            padding: 5px 40px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 15px;
+            margin: 15px;
+            cursor: pointer;
+            border-radius: 15px;
+            box-shadow: 0px 0px 5px rgb(0, 255, 55);
         }
     </style>
 </head>
@@ -54,18 +69,54 @@
     <header>
         <br>
         <h1>LU9DCE - Eduardo Castillo</h1>
-        <h2>Radio Aficionado - Programas PHP - Linux -  (Argentina)</h2><br><br><br>
+        <h2>Radio Aficionado - Programas PHP - Linux - (Argentina)</h2><br><br><br>
     </header>
+    <center>
+        <a href="#" class="boton">
+            <span>&#127968;</span>
+        </a>
+
+        <a href="#" class="boton">
+            <span>&#128247;</span>
+        </a>
+
+        <a href="#" class="boton">
+            <span>&#128172;</span>
+        </a>
+    </center>
     <div class="xd">
-    <div class="container">
-        <h2>¡Bienvenido! a mi web!</h2>
-        <p></p>
+        <div class="container">
+            <h2>¡Bienvenido! a mi web!</h2>
+            <p></p>
+        </div>
+        <div class="con">
+            <p>En esta web encontrarás datos sobre mí que compartiré contigo 😊</p>
+            <p>Más que nada, son cosas que me gustan y mis pasatiempos 🎮</p>
+            <hr>
+            <p>🚀 <strong>¿Por qué elijo programar en PHP para mis proyectos en GitHub?</strong></p>
+            <p>🤔 La respuesta es simple:</p>
+            <p>Necesitaba un lenguaje de programación versátil que funcionara en diversos dispositivos y sistemas
+                operativos.</p>
+            <p>Probé con bash, PowerShell y Python, pero todos resultaron ser un desafío:</p>
+            <p>🪶 ¡Bash en Windows! ¡PowerShell en Linux! Y aunque Python es popular, personalmente lo encontré
+                complicado porque</p>
+            <p>requería la instalación de <strong>módulos adicionales</strong> para tareas específicas, lo que se volvía
+                un proceso interminable.</p>
+            <p>Necesitaba un lenguaje que manejara texto, <strong>CSV, RSS, XLS, HTML</strong> y mucho más,</p>
+            <p>todo sin la necesidad de instalar complementos adicionales.</p>
+            <p>Es por eso que encontré <strong>PHP</strong>. 🌟</p>
+            <p>Esto me permitió no solo trabajar con texto, sino también explorar numerosas</p>
+            <p>posibilidades, como la creación de imágenes, la gestión de bases de datos y el control de puertos
+                <strong>TCP y UDP</strong>. 📊
+            </p>
+            <p>¡Ah, sí, sé que <strong>Python</strong> también puede hacerlo, pero requiere <strong>módulos
+                    adicionales</strong>! 🐍</p>
+            <p>En cambio, <strong>PHP</strong> viene con todas las herramientas que necesito sin necesidad de instalar
+                nada más. 🛠️</p>
+            <hr>
+            <h2>Continuara . . .</h2>
+        </div>
     </div>
-    <div class="con">
-        <p>En esta web encontrarás datos sobre mí que compartiré contigo 😊</p>
-        <p>Más que nada, son cosas que me gustan y mis pasatiempos 🎮</p>
-    </div>
-</div>
 </body>
 
 </html>
