--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
 
         h1 {
-            font-size: 3em;
+            font-size: 30px;
         }
 
         .container {
@@ -56,7 +56,7 @@
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 15px;
+            font-size: 12px;
             margin: 15px;
             cursor: pointer;
             border-radius: 15px;
@@ -67,9 +67,8 @@
 
 <body>
     <header>
-        <br>
         <h1>LU9DCE - Eduardo Castillo</h1>
-        <h2>Radio Aficionado - Programas PHP - Linux - (Argentina)</h2><br><br><br>
+        <h2>Radio Aficionado - Programas PHP - Linux - (Argentina)</h2><br>
     </header>
     <center>
         <a href="#" class="boton">
