--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mi Página Web</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Open Sans', sans-serif;
             background-color: #000000;
             margin: 0;
             padding: 0;
@@ -63,6 +63,7 @@
             box-shadow: 0px 0px 5px rgb(0, 255, 55);
         }
     </style>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
 </head>
 
 <body>
