--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             background-color: #000000;
             margin: 0;
             padding: 0;
+            font-size: 12px;
         }
 
         header {
