--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
             background: linear-gradient(to bottom, #424244, #000000);
             color: #ffffff;
             text-align: center;
-            padding: 1em;
-            box-shadow: 0px 0px 10px rgb(7, 241, 58);
+            box-shadow: 0px 0px 2px rgb(0, 255, 55);
             text-shadow: 2px 2px 2px #064700;
+            border-radius: 15px;
+            max-width: 800px;
+            margin: 0 auto;
         }
 
         .xd {
             background: linear-gradient(to bottom, #424244, #000000);
             padding: 1em;
-            box-shadow: 0px 0px 10px rgb(7, 241, 58);
         }
 
-        h1 {
-            font-size: 30px;
+        .xdx {
+            background: linear-gradient(to bottom, #424244, #000000);
         }
 
         .container {
@@ -40,6 +41,11 @@
             padding: 20px;
             background-color: #202020;
             color: #f0f0f0;
+        }
+
+
+        h1 {
+            font-size: 38px;
         }
 
         .con {
@@ -51,7 +57,7 @@
         }
 
         .boton {
-            background: linear-gradient(to bottom, #cac4c4, #010500);
+            background: linear-gradient(to bottom, #424244, #000000);
             color: #ffffff;
             border: none;
             padding: 5px 40px;
@@ -62,29 +68,35 @@
             margin: 15px;
             cursor: pointer;
             border-radius: 15px;
-            box-shadow: 0px 0px 5px rgb(0, 255, 55);
+            box-shadow: 0px 0px 2px rgb(0, 255, 55);
         }
     </style>
 </head>
 
 <body>
+    <br>
     <header>
+        <br>
         <h1>LU9DCE - Eduardo Castillo</h1>
-        <h2>Radio Aficionado - Programas PHP - Linux - (Argentina)</h2><br>
+        <h2>Radio Aficionado - Programas PHP - Linux - (Argentina)</h2>
+        <br><br>
     </header>
-    <center>
-        <a href="#" class="boton">
-            <span>&#127968;</span>
-        </a>
+    <br>
+    <div class="xdx">
+        <center>
+            <a href="#" class="boton">
+                <span>&#127968;</span>
+            </a>
 
-        <a href="#" class="boton">
-            <span>&#128247;</span>
-        </a>
+            <a href="#" class="boton">
+                <span>&#128247;</span>
+            </a>
 
-        <a href="#" class="boton">
-            <span>&#128172;</span>
-        </a>
-    </center>
+            <a href="#" class="boton">
+                <span>&#128172;</span>
+            </a>
+        </center>
+    </div>
     <div class="xd">
         <div class="container">
             <h2>¡Bienvenido! a mi web!</h2>
