--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
+    <title>LU9DCE</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
     <style>
         body {
@@ -84,7 +84,7 @@
     <br>
     <div class="xdx">
         <center>
-            <a href="#" class="boton">
+            <a href="index.html" class="boton">
                 <span>&#127968;</span>
             </a>
 
@@ -92,7 +92,7 @@
                 <span>&#128247;</span>
             </a>
 
-            <a href="#" class="boton">
+            <a href="mega.html" class="boton">
                 <span>&#128172;</span>
             </a>
         </center>
