--- a/in.html
+++ b/in.html
@@ -32,7 +32,7 @@
   .container img {
     border: 3px solid black; /* Marco negro */
     box-shadow: 0px 4px 8px rgba(0, 128, 0, 0.3); /* Sombra verde en imágenes */
-    max-width: 100%;
+    max-width: 50%; /* Reducir al 50% del tamaño original */
     height: auto;
   }
 </style>
@@ -41,15 +41,15 @@
 <div class="container">
   <p>
     <span style="color:#2980b9"><span style="font-size:18px"><strong>PHP Developer</strong></span></span><br>
-    <br><span style="font-size:14px">QAP 28.074 FT8</span>
+    <br><span style="font-size:14px">QAP 28.074 FT8</span><br>
   </p>
   <hr />
   <p>
     <span style="color:#c0392b"><span style="font-size:18px"><strong>ULTRON - Automatic Control of JTDX/WSJT-X/MSHV</strong></span></span><br>
-    <span style="font-size:14px"><br>
+    <br><span style="font-size:14px">
       <a href="https://github.com/lu9dce/ultron">https://github.com/lu9dce/ultron</a>
-    </span><br><br>
-    <img alt="Image 1" src="https://cdn-bio.qrz.com/e/lu9dce/ultron1.jpg?p=6161636077b0bd2d0bedfd356c03983c" />
+    </span><br>
+    <br><img alt="Image 1" src="https://cdn-bio.qrz.com/e/lu9dce/ultron1.jpg?p=6161636077b0bd2d0bedfd356c03983c" />
     <br><br>
     ULTRON is a sophisticated software tool designed for remotely or locally controlling
     programs like JTDX, MSHV, and WSJT-X. It offers seamless operation on both
@@ -61,10 +61,10 @@
   <hr />
   <p>
     <span style="color:#c0392b"><span style="font-size:18px"><strong>AUTO-SPOT: Making Ham Radio Simple!</strong></span></span><br>
-    <span style="font-size:14px"><br>
+    <br><span style="font-size:14px">
       <a href="https://github.com/lu9dce/autospot">https://github.com/lu9dce/autospot</a>
-    </span><br><br>
-    <img src="https://pbs.twimg.com/media/F5QS6tEXEAA9WhI?format=png" />
+    </span><br>
+    <br><img src="https://pbs.twimg.com/media/F5QS6tEXEAA9WhI?format=png" />
     <br><br>
     Auto-Spot is your one-stop solution for online amateur radio logging.
     It's more than just a program; it's your gateway to seamless radio communication
