--- a/in.html
+++ b/in.html
@@ -81,10 +81,14 @@
   </p>
   <hr />
   <p>
+    <center>
     <img alt="Image 2" src="https://cdn-bio.qrz.com/e/lu9dce/0847536356_5805374135394051555_n.jpg?p=6161636077b0bd2d0bedfd356c03983c" />
+    <br> <br>
     <img alt="Image 3" src="https://cdn-bio.qrz.com/e/lu9dce/3714172736_6524376210782677079_n.jpg?p=6161636077b0bd2d0bedfd356c03983c" />
+    <br> <br>
     <img alt="Image 4" src="https://cdn-bio.qrz.com/e/lu9dce/qsl.jpg?p=6161636077b0bd2d0bedfd356c03983c" />
-  </p>
+    </center>  
+</p>
 </div>
 </body>
 </html>
