--- a/in.html
+++ b/in.html
@@ -32,16 +32,16 @@
   .container img {
     border: 3px solid black; /* Marco negro */
     box-shadow: 0px 4px 8px rgba(0, 128, 0, 0.3); /* Sombra verde en imágenes */
-    max-width: 50%; /* Reducir al 50% del tamaño original */
-    height: auto;
+    width: 500px; /* Ancho fijo */
+    height: 350px; /* Alto fijo */
   }
 </style>
 </head>
 <body>
 <div class="container">
   <p>
-    <span style="color:#2980b9"><span style="font-size:18px"><strong>PHP Developer</strong></span></span><br>
-    <br><span style="font-size:14px">QAP 28.074 FT8</span><br>
+    <span style="color:#2980b9"><span style="font-size:28px"><strong>PHP Developer</strong></span></span><br>
+    <br><span style="font-size:16px">QAP 28.074 FT8</span><br>
   </p>
   <hr />
   <p>
