--- a/in.html
+++ b/in.html
@@ -51,10 +51,10 @@
     </span><br>
     <br><img alt="Image 1" src="https://cdn-bio.qrz.com/e/lu9dce/ultron1.jpg?p=6161636077b0bd2d0bedfd356c03983c" />
     <br><br>
-    ULTRON is a sophisticated software tool designed for remotely or locally controlling
-    programs like JTDX, MSHV, and WSJT-X. It offers seamless operation on both
-    Windows and Linux platforms, supporting both 32-bit and 64-bit versions.
-    The software relies on the latest version of PHP for optimal performance.
+    ULTRON is a sophisticated software tool designed for remotely or locally controlling<br>
+    programs like JTDX, MSHV, and WSJT-X. It offers seamless operation on both<br>
+    Windows and Linux platforms, supporting both 32-bit and 64-bit versions.<br>
+    The software relies on the latest version of PHP for optimal performance.<br>
     <br><br>
     <a href="https://www.paypal.com/donate/?hosted_button_id=WHG8FQRMAPA3E" style="display:inline-block;padding:15px 30px;border:0;margin:10px;background-color:#0070BA;color:white;border-radius:5px;text-decoration:none;box-shadow:0px 4px 8px rgba(0, 0, 0, 0.3);transition:transform 0.3s ease 0s;" target="_top">DONATE WITH PAYPAL</a>
   </p>
@@ -66,18 +66,18 @@
     </span><br>
     <br><img src="https://pbs.twimg.com/media/F5QS6tEXEAA9WhI?format=png" />
     <br><br>
-    Auto-Spot is your one-stop solution for online amateur radio logging.
-    It's more than just a program; it's your gateway to seamless radio communication
-    and a hassle-free QSO experience!
+    Auto-Spot is your one-stop solution for online amateur radio logging.<br>
+    It's more than just a program; it's your gateway to seamless radio communication<br>
+    and a hassle-free QSO experience!<br>
   </p>
   <p>
     <span style="font-size:14px"><a href="https://www.paypal.com/donate/?hosted_button_id=WHG8FQRMAPA3E" style="display:inline-block;padding:15px 30px;border:0;margin:10px;background-color:#0070BA;color:white;border-radius:5px;text-decoration:none;box-shadow:0px 4px 8px rgba(0, 0, 0, 0.3);transition:transform 0.3s ease 0s;" target="_top">DONATE WITH PAYPAL</a></span>
   </p>
   <hr />
   <p>
-    <em><strong><span style="color:#336600"><span style="font-size:14px">Confirm your contact through "lotw".
-    It will only respond to active lotw users within the last 6 months.
-    If the contact was not confirmed for a while, the bot will call it again.</span></span></strong></em>
+    <em><strong><span style="color:#336600"><span style="font-size:14px">Confirm your contact through "lotw".<br>
+    It will only respond to active lotw users within the last 6 months.<br>
+    If the contact was not confirmed for a while, the bot will call it again.<br></span></span></strong></em>
   </p>
   <hr />
   <p>
