--- a/in.html
+++ b/in.html
@@ -13,7 +13,6 @@
     margin: 20px;
     padding: 20px;
     background-color: #111; /* Fondo oscuro */
-    box-shadow: 0px 4px 8px rgba(0, 128, 0, 0.3); /* Sombra verde */
   }
 
   .container hr {
@@ -30,7 +29,7 @@
   }
 
   .container img {
-    border: 3px solid black; /* Marco negro */
+    border: 5px solid rgb(0, 0, 0); /* Marco negro */
     box-shadow: 0px 4px 8px rgba(0, 128, 0, 0.3); /* Sombra verde en imágenes */
     width: 500px; /* Ancho fijo */
     height: 350px; /* Alto fijo */
@@ -45,7 +44,7 @@
   </p>
   <hr />
   <p>
-    <span style="color:#c0392b"><span style="font-size:18px"><strong>ULTRON - Automatic Control of JTDX/WSJT-X/MSHV</strong></span></span><br>
+    <span style="color:#f73e2a"><span style="font-size:18px"><strong>ULTRON - Automatic Control of JTDX/WSJT-X/MSHV</strong></span></span><br>
     <br><span style="font-size:14px">
       <a href="https://github.com/lu9dce/ultron">https://github.com/lu9dce/ultron</a>
     </span><br>
@@ -60,7 +59,7 @@
   </p>
   <hr />
   <p>
-    <span style="color:#c0392b"><span style="font-size:18px"><strong>AUTO-SPOT: Making Ham Radio Simple!</strong></span></span><br>
+    <span style="color:#f73e2a"><span style="font-size:18px"><strong>AUTO-SPOT: Making Ham Radio Simple!</strong></span></span><br>
     <br><span style="font-size:14px">
       <a href="https://github.com/lu9dce/autospot">https://github.com/lu9dce/autospot</a>
     </span><br>
@@ -75,7 +74,7 @@
   </p>
   <hr />
   <p>
-    <em><strong><span style="color:#336600"><span style="font-size:14px">Confirm your contact through "lotw".<br>
+    <em><strong><span style="color:#4f9b03"><span style="font-size:14px">Confirm your contact through "lotw".<br>
     It will only respond to active lotw users within the last 6 months.<br>
     If the contact was not confirmed for a while, the bot will call it again.<br></span></span></strong></em>
   </p>
