--- a/in.html
+++ b/in.html
@@ -44,13 +44,13 @@
   </p>
   <hr />
   <span style="font-size:14px">
-    <a href="https://www.pling.com/u/lu9dce">THE BEST FREE WALLPAPERS</a>
+    <a href="https://www.pling.com/u/lu9dce" target="_blank">THE BEST FREE WALLPAPERS</a>
   </span>
   <hr />
   <p>
     <span style="color:#f73e2a"><span style="font-size:18px"><strong>ULTRON - Automatic Control of JTDX/WSJT-X/MSHV</strong></span></span><br>
     <br><span style="font-size:14px">
-      <a href="https://github.com/lu9dce/ultron">https://github.com/lu9dce/ultron</a>
+      <a href="https://github.com/lu9dce/ultron" target="_blank">https://github.com/lu9dce/ultron</a>
     </span><br>
     <br><img alt="Image 1" src="https://cdn-bio.qrz.com/e/lu9dce/ultron1.jpg?p=6161636077b0bd2d0bedfd356c03983c" />
     <br><br>
@@ -59,13 +59,13 @@
     Windows and Linux platforms, supporting both 32-bit and 64-bit versions.<br>
     The software relies on the latest version of PHP for optimal performance.<br>
     <br>
-    <a href="https://www.paypal.com/donate/?hosted_button_id=WHG8FQRMAPA3E" style="display:inline-block;padding:15px 30px;border:0;margin:10px;background-color:#0070BA;color:white;border-radius:5px;text-decoration:none;box-shadow:0px 4px 8px rgba(0, 0, 0, 0.3);transition:transform 0.3s ease 0s;" target="_top">DONATE WITH PAYPAL</a>
+    <a href="https://www.paypal.com/donate/?hosted_button_id=WHG8FQRMAPA3E" style="display:inline-block;padding:15px 30px;border:0;margin:10px;background-color:#0070BA;color:white;border-radius:5px;text-decoration:none;box-shadow:0px 4px 8px rgba(0, 0, 0, 0.3);transition:transform 0.3s ease 0s;"  target="_blank">DONATE WITH PAYPAL</a>
   </p>
   <hr />
   <p>
     <span style="color:#f73e2a"><span style="font-size:18px"><strong>AUTO-SPOT: Making Ham Radio Simple!</strong></span></span><br>
     <br><span style="font-size:14px">
-      <a href="https://github.com/lu9dce/autospot">https://github.com/lu9dce/autospot</a>
+      <a href="https://github.com/lu9dce/autospot"  target="_blank">https://github.com/lu9dce/autospot</a>
     </span><br>
     <br><img src="https://pbs.twimg.com/media/F5QS6tEXEAA9WhI?format=png" />
     <br><br>
@@ -74,7 +74,7 @@
     and a hassle-free QSO experience!<br>
   </p>
   <p>
-    <span style="font-size:14px"><a href="https://www.paypal.com/donate/?hosted_button_id=WHG8FQRMAPA3E" style="display:inline-block;padding:15px 30px;border:0;margin:10px;background-color:#0070BA;color:white;border-radius:5px;text-decoration:none;box-shadow:0px 4px 8px rgba(0, 0, 0, 0.3);transition:transform 0.3s ease 0s;" target="_top">DONATE WITH PAYPAL</a></span>
+    <span style="font-size:14px"><a href="https://www.paypal.com/donate/?hosted_button_id=WHG8FQRMAPA3E" style="display:inline-block;padding:15px 30px;border:0;margin:10px;background-color:#0070BA;color:white;border-radius:5px;text-decoration:none;box-shadow:0px 4px 8px rgba(0, 0, 0, 0.3);transition:transform 0.3s ease 0s;"  target="_blank">DONATE WITH PAYPAL</a></span>
   </p>
   <hr />
   <p>
