--- a/in.html
+++ b/in.html
@@ -44,7 +44,7 @@
   </p>
   <hr />
   <span style="font-size:14px">
-    <a href="https://www.pling.com/u/lu9dce" target="_blank">THE BEST FREE WALLPAPERS</a>
+    POWER BY SLACKWARE
   </span>
   <hr />
   <p>
