--- a/mega.html
+++ b/mega.html
@@ -20,7 +20,7 @@
             color: #ffffff;
             text-align: center;
             box-shadow: 0px 0px 2px rgb(0, 255, 55);
-            text-shadow: 2px 2px 2px #064700;
+            text-shadow: 0px 0px 5px #064700;
             border-radius: 15px;
             max-width: 800px;
             margin: 0 auto;
@@ -68,7 +68,7 @@
             margin: 15px;
             cursor: pointer;
             border-radius: 15px;
-            box-shadow: 0px 0px 2px rgb(0, 255, 55);
+            box-shadow: 0px 0px 5px rgb(0, 255, 55);
         }
     </style>
 </head>
@@ -78,7 +78,7 @@
     <header>
         <br>
         <h1>LU9DCE - Eduardo Castillo</h1>
-        <h2>Radio Aficionado - Programas PHP - Linux - (Argentina)</h2>
+        <h2>Radio Aficionado - Programas PHP - SLACKWARE - (Argentina)</h2>
         <br><br>
     </header>
     <br>
