--- a/index.html
+++ b/index.html
@@ -7,71 +7,7 @@
     <meta name="ocs-site-verification" content="45b0a1b8cc0eafe4ce7847871f9d33ea" />
     <title>LU9DCE</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
-    <style>
-        body {
-            font-family: 'Open Sans', sans-serif;
-            background-color: #000000;
-            margin: 0;
-            padding: 0;
-            font-size: 12px;
-        }
-
-        header {
-            background: linear-gradient(to bottom, #424244, #000000);
-            color: #ffffff;
-            text-align: center;
-            box-shadow: 0px 0px 2px rgb(0, 255, 55);
-            text-shadow: 0px 0px 5px #064700;
-            border-radius: 15px;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-
-        .xd {
-            background: linear-gradient(to bottom, #424244, #000000);
-            padding: 1em;
-        }
-
-        .xdx {
-            background: linear-gradient(to bottom, #424244, #000000);
-        }
-
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #202020;
-            color: #f0f0f0;
-        }
-
-
-        h1 {
-            font-size: 38px;
-        }
-
-        .con {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 10px;
-            background-color: #082707;
-            color: #f8f1f1;
-        }
-
-        .boton {
-            background: linear-gradient(to bottom, #424244, #000000);
-            color: #ffffff;
-            border: none;
-            padding: 5px 40px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 12px;
-            margin: 15px;
-            cursor: pointer;
-            border-radius: 15px;
-            box-shadow: 0px 0px 5px rgb(0, 255, 55);
-        }
-    </style>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 
 <body>
