--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         </div>
         <div class="con">
             <p>En esta web encontrarás datos sobre mí que compartiré contigo 😊</p>
-            <p>Más que nada, son cosas que me gustan y mis pasatiempos 🎮</p>
+            <p>Más que nada, son cosas que me gustan y mis pasatiempos</p>
             <hr>
             <p>🚀 <strong>¿Por qué elijo programar en PHP para mis proyectos en GitHub?</strong></p>
-            <p>🤔 La respuesta es simple:</p>
+            <p>La respuesta es simple 🤔</p>
             <p>Necesitaba un lenguaje de programación versátil que funcionara en diversos dispositivos y sistemas
                 operativos.</p>
             <p>Probé con bash, PowerShell y Python, pero todos resultaron ser un desafío:</p>
@@ -57,13 +57,14 @@
             <p>Es por eso que encontré <strong>PHP</strong>. 🌟</p>
             <p>Esto me permitió no solo trabajar con texto, sino también explorar numerosas</p>
             <p>posibilidades, como la creación de imágenes, la gestión de bases de datos y el control de puertos
-                <strong>TCP y UDP</strong>. 📊
+                <strong>TCP y UDP</strong>.
             </p>
             <p>¡Ah, sí, sé que <strong>Python</strong> también puede hacerlo, pero requiere <strong>módulos
                     adicionales</strong>! 🐍</p>
             <p>En cambio, <strong>PHP</strong> viene con todas las herramientas que necesito sin necesidad de instalar
                 nada más. 🛠️</p>
             <hr>
+            <p>El sistema operativo que uso es SLACKWARE 15.0</p>
             <h2>Continuara . . .</h2>
         </div>
     </div>
