--- a/mega.html
+++ b/mega.html
@@ -43,8 +43,8 @@
             <p>Te explico más o menos qué es...</p>
             <p>Los "<strong>modos digitales</strong>" se refieren a las diferentes formas de transmitir datos
                 digitalmente a través de las bandas de radio.</p>
-            <p>Estos <strong>modos digitales</strong> permiten a los radioaficionados comunicarse mediante señales de
-                radio que representan información digital</p>
+            <p>Estos <strong>modos digitales</strong> permiten a los radioaficionados comunicarse</p>
+            <p>mediante señales de radio que representan información digital</p>
             <p>en lugar de voz o señales analógicas. Es decir, conectamos los equipos de radio a la PC</p>
             <p>Se basan en la transmisión de información en forma de señales digitales</p>
             <p>en lugar de señales analógicas, como las utilizadas en las transmisiones de voz.</p>
